--- a/index.html
+++ b/index.html
@@ -487,6 +487,22 @@
             </div>
           </div>
         </div>
+        
+        
+        <div class="col-lg-4 mb-4">
+  <div class="card">
+    <img class="card-img-top" src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/content/Fire_Blood_small.jpeg" alt="" />
+    <div class="card-body">
+      <h5 class="card-title">Fire and Blood</h5>
+      <p class="card-text">Fire and Blood focuses on the history of the Targaryen family from 300 years before the setting of the first GOT book. They are the first family after Westeros was united and brought under one ruler. We follow the rise and the fall of the family that set up the foundation for the rest of Westeros.</p>
+      <a
+        href="https://github.com/Op-panda"
+        class="btn btn-outline-danger btn-sm"
+        >Contributed by - Amit Pandey</a
+      >
+    </div>
+  </div>
+</div>
 
 
         <!--Ends here-->
