added my book card

--- a/index.html
+++ b/index.html
@@ -520,16 +520,46 @@
 
         <div class="col-lg-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="https://m.media-amazon.com/images/I/51oOEob0QWL._SY264_BO1,204,203,200_QL40_FMwebp_.jpg" alt="God's War" />
+            <img class="card-img-top"
+              src="https://m.media-amazon.com/images/I/51oOEob0QWL._SY264_BO1,204,203,200_QL40_FMwebp_.jpg"
+              alt="God's War" />
             <div class="card-body">
               <h5 class="card-title">God's War</h5>
-              <p class="card-text">The story of how a group of warriors, driven by faith, greed and wanderlust, carved out new Christian-ruled states in the Middle East is one of the most extraordinary of all epics. The crusaders' stunning initial success started a sequence of great Crusades, each with its own story, that fundamentally shaped the Christian and Muslim worlds for two centuries, until the last Crusader castles were finally expunged. The energy and commitment that sent army after army into the eastern Mediterranean also led to the invasion and conversion of Central and Baltic Europe, Spain, Portugal, the destruction of the Cathars in Provence and the settlement of America.</p>
+              <p class="card-text">The story of how a group of warriors, driven by faith, greed and wanderlust, carved
+                out new Christian-ruled states in the Middle East is one of the most extraordinary of all epics. The
+                crusaders' stunning initial success started a sequence of great Crusades, each with its own story, that
+                fundamentally shaped the Christian and Muslim worlds for two centuries, until the last Crusader castles
+                were finally expunged. The energy and commitment that sent army after army into the eastern
+                Mediterranean also led to the invasion and conversion of Central and Baltic Europe, Spain, Portugal, the
+                destruction of the Cathars in Provence and the settlement of America.</p>
               <a href="https://github.com/AnkushRC2001" class="btn btn-outline-danger btn-sm">Contributed by -
                 Ankush Roy Chowdhury</a>
             </div>
           </div>
         </div>
-        
+
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top"
+              src="https://cdn.shopify.com/s/files/1/2789/4914/products/buy-a-game-of-thrones-book-online-at-low-prices-in-india-bookish-books-bookish-santa-13705740124293_408x654.jpg?v=1590544997"
+              alt="" />
+            <div class="card-body">
+              <h5 class="card-title">[A Game of Thrones]</h5>
+              <p class="card-text">[A Game of Thrones is the first novel in A Song of Ice and Fire, a series of fantasy
+                novels by American author George R. R. Martin. It was first published on August 1, 1996. The novel won
+                the 1997 Locus Award[2] and was nominated for both the 1997 Nebula Award[2] and the 1997 World Fantasy
+                Award.[3] The novella Blood of the Dragon, comprising the Daenerys Targaryen chapters from the novel,
+                won the 1997 Hugo Award for Best Novella. In January 2011, the novel became a New York Times
+                Bestseller[4] and reached No. 1 on the list in July 2011.[5]]</p>
+              <a href="[https://github.com/AshishS9565]" class="btn btn-outline-danger btn-sm">Contributed by -
+                [Ashish Kumar Singh]</a>
+            </div>
+          </div>
+        </div>
+
+
+
         <!--Ends here-->
       </div>
     </div>
