--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
       <a
         href="https://github.com/Op-panda"
         class="btn btn-outline-danger btn-sm"
-        >Contributed by - [Amit Pandey]</a
+        >Contributed by - Amit Pandey</a
       >
     </div>
   </div>
