--- a/index.html
+++ b/index.html
@@ -547,9 +547,11 @@
     </div>
   </section>
   <footer>
-    <h1></h1>
-    <a href="#header" class="back-to-top"><i class="fas fa-angle-up fa-4x backToTop"></i></a>
-  </footer>
+      
+    <div class="footer-copyright">
+        <p>Copyright @ 2022 All Rights Reserved.</p>
+    </div>
+</footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
