--- a/index.html
+++ b/index.html
@@ -542,6 +542,21 @@
             </div>
           </div>
         </div>
+      
+      <div class="col-lg-4 mb-4"></div>
+          <div class="card">
+            <img alt="The Code Book" class="card-img-top"
+              src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.amazon.in%2FProgramming-Schaums-Outlines-Byron-Gottfried%2Fdp%2F0070145903&psig=AOvVaw0P7atLW3G_FCXVDL4aYT3x&ust=1665546781100000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCIiPxrSj1_oCFQAAAAAdAAAAABAE">
+            <div class="card-body">
+              <h5 class="card-title">Programming With C (SCHAUMS OUTLINES SERIES): Byron Gottfired</h5>
+              <p class="card-text">
+              This book follows a simplified way for solving problem. Through sample programs, it guides the readers to comprehend the different situations in which a certain feature can be used. The book has been developed based on the ANSI C standards. There is emphasis on designing clear, legible, modular and efficient programs throughout the book.
+              </p>
+              <a href="https://github.com/deepaksy" class="btn btn-outline-danger btn-sm">Contributed by -
+                Deepak Suryawanshi</a>
+            </div>
+          </div>
+        </div>
         <!--Ends here-->
       </div>
     </div>
