Update for image src for Programming with C  Card
Updated the image link for programming with C book card.

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
       <div class="col-lg-4 mb-4"></div>
           <div class="card">
             <img alt="The Code Book" class="card-img-top"
-              src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.amazon.in%2FProgramming-Schaums-Outlines-Byron-Gottfried%2Fdp%2F0070145903&psig=AOvVaw0P7atLW3G_FCXVDL4aYT3x&ust=1665546781100000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCIiPxrSj1_oCFQAAAAAdAAAAABAE">
+              src="https://m.media-amazon.com/images/I/81+vsc3xbQL.jpg">
             <div class="card-body">
               <h5 class="card-title">Programming With C (SCHAUMS OUTLINES SERIES): Byron Gottfired</h5>
               <p class="card-text">
