--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
           <div class="card">
             <img class="card-img-top" src="https://1.bp.blogspot.com/-XuGgmtuKFwU/YPKmTZ-64zI/AAAAAAAACTo/Yi3_th91rlMs1G8HecNtBWyJTybz7FfRACLcBGAsYHQ/s693/16.png" alt="life mitra book"/>
             <div class="card-body">
-              <h5 class="card-title">kash ye baatein 20 ki umar me pata hoti by Life mitra </h5>
+              <h5 class="card-title">काश ये बातें 20 की उम्र में पता होती</h5>
               <p class="card-text">This is a awesome book for self Development / personality Development book which will help to think a new perspective in life  Basically, Almost all successful people believe that every person living in this world is a product of his own thinking. He who thinks of himself, one day he remains there. Our life begins in critical thinking, what we keep thinking, we do there and the result of what we do, that decides our life. so must give it a try !</p>
               <a href="https://github.com/pratap360" class="btn btn-outline-danger btn-sm">Contributed by - Pratap Parui</a>
             </div>
