--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             <img alt="The Code Book" class="card-img-top"
               src="https://m.media-amazon.com/images/I/81+vsc3xbQL.jpg">
             <div class="card-body">
-              <h5 class="card-title">Programming With C (SCHAUMS OUTLINES SERIES): Byron Gottfired</h5>
+              <h5 class="card-title">Programming With C (SCHAUMS OUTLINES SERIES)</h5>
               <p class="card-text">
               This book follows a simplified way for solving problem. Through sample programs, it guides the readers to comprehend the different situations in which a certain feature can be used. The book has been developed based on the ANSI C standards. There is emphasis on designing clear, legible, modular and efficient programs throughout the book.
               </p>
