--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
           </div>
         </div>
       
-      <div class="col-lg-4 mb-4"></div>
+      <div class="col-lg-4 mb-4">
           <div class="card">
             <img alt="The Code Book" class="card-img-top"
               src="https://m.media-amazon.com/images/I/81+vsc3xbQL.jpg">
