--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
           </div>
         </div>
       
-      <div class="col-lg-4 mb-4">
+      <div class="col-lg-4 mb-4"></div>
           <div class="card">
             <img alt="The Code Book" class="card-img-top"
               src="https://m.media-amazon.com/images/I/81+vsc3xbQL.jpg">
@@ -627,6 +627,18 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+             <img class="card-img-top" src="https://www.thebalancemoney.com/thmb/1HhzEc1HTgk_1cUE9w1MX769tvU=/2250x0/filters:no_upscale():max_bytes(150000):strip_icc()/Webp.net-resizeimage12-b9cd8d74bcef401cb591813dafefd583.jpg" alt="life mitra book"/>
+            <div class="card-body">
+               <h5 class="card-title">Broke Millenials</h5>
+               <p class="card-text">If you can decipher #GYFLT, then this is the personal finance book for you. (Hint: #GYFLT stands for “get your financial life together” in social media speak.) Erin Lowrys “Broke Millennial” explains in her signature conversational style how 20-somethings can get in control of their personal finances. From understanding your relationship with money to managing student loans to sharing the details of your finances with a partner, this book covers the biggest money challenges facing millennials today. </p>
+               <a href="https://github.com/dadangsetio" class="btn btn-outline-danger btn-sm">Contributed by - Dadang Budi</a>
+             </div>
+           </div>
+         </div>
+ 
 
         <!--Ends here-->
       </div>
