--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
               src="https://m.media-amazon.com/images/I/51kQWMG+ZzL.jpg">
             <div class="card-body">
               <h5 class="card-title">The Code Book: The Science of Secrecy from Ancient Egypt to Quantum Cryptography</h5>
-              <p class="card-text">In his first book since the bestselling Fermat's Enigma, Simon Singh offers the first sweeping history of encryption, tracing its evolution and revealing the dramatic effects codes have had on wars, nations, and individual lives. From Mary, Queen of Scots, trapped by her own code, to the Navajo Code Talkers who helped the Allies win World War II, to the incredible (and incredibly simple) logisitical breakthrough that made Internet commerce secure, The Code Book tells the story of the most powerful intellectual weapon ever known: secrecy.Throughout the text are clear technical and mathematical explanations, and portraits of the remarkable personalities who wrote and broke the world's most difficult codes. Accessible, compelling, and remarkably far-reaching, this book will forever alter your view of history and what drives it.  It will also make you wonder how private that e-mail you just sent really is.</p>
+              <p class="card-text">In his first book since the bestselling Fermat's Enigma, Simon Singh offers the first sweeping history of encryption, tracing its evolution and revealing the dramatic effects codes have had on wars, nations, and individual lives.</p>
               <a href="https://github.com/mnaiwrit52" class="btn btn-outline-danger btn-sm">Contributed by -
                 Naiwrit Mullick</a>
             </div>
