--- a/index.html
+++ b/index.html
@@ -416,15 +416,15 @@
     <h1></h1>
     <a href="#header" class="back-to-top"><i class="fas fa-angle-up fa-4x backToTop"></i></a>
   <div class="footer-basic">
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i
-            class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-pinterest"></i></a><a
-          href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></div>
+      <div class="social"><a href="#"><i
+            class="icon ion-social-linkedin"></i></a>
+          <a href="#"><i class="icon ion-social-github"></i></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="#">Home</a></li>
         <li class="list-inline-item"><a href="#">BookCase</a></li>
         <li class="list-inline-item"><a href="#">About</a></li>
       </ul>
-      <p class="copyright">BOOK CASE © 2021</p>
+      <p class="copyright">BOOK CASE © 2022</p>
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
