book card added

--- a/index.html
+++ b/index.html
@@ -199,6 +199,24 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/91nTClkODkL.jpg" />
+            <div class="card-body">
+              <h5 class="card-title">Looking for Alaska</h5>
+              <p class="card-text">Looking for Alaska deals with the universal questions of love, friendship, truth, and the gray areas in between. 
+                This story is about Miles, 
+                who attempts to reinvent himself in a new school,
+                 with new friends and activities, and how his meeting with Alaska Young,
+                  a witty and carefree girl, changed his life.</p>
+              <a
+                href="https://github.com/Yoogiitaa"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - Yoogiitaa</a
+              >
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-4 mb-4">
           <div class="card">
