--- a/index.html
+++ b/index.html
@@ -553,6 +553,18 @@
                 Abhijeet Srivastav</a>
             </div>
           </div>  
+          
+          <div class="col-lg-4 mb-4"></div>
+          <div class="card">
+            <img alt="Sadhna" class="card-img-top"
+              src="https://www.amazon.in/Sadhana-Realisation-Life-Rabindranath-Tagore/dp/9386906244/ref=sr_1_4?crid=2TKKYV6KPO0UF&keywords=sadghuru&qid=1665477650&qu=eyJxc2MiOiIyLjcyIiwicXNhIjoiMi40OCIsInFzcCI6IjAuODEifQ%3D%3D&sprefix=sadghuru%2Caps%2C434&sr=8-4">
+            <div class="card-body">
+              <h5 class="card-title">The Realisation of Life</h5>
+              <p class="card-text">Sadhana: The Realisation of Life *Sadhana* is a concise introduction to the spiritual heritage of ancient India by Rabindranath Tagore. With chapters on Soul Consciousness, the Problems of Evil and the self and Realisation in Love, Action, Beauty and the Infinite, it contains the essence of the texts of Indian philosophy.</p>
+              <a href="https://github.com/AbhijeetSrivastav" class="btn btn-outline-danger btn-sm">Contributed by -
+                Abhijeet Srivastav</a>
+            </div>
+          </div> 
 
         </div>
         <!--Ends here-->
