--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <div class="card-body">
               <h5 class="card-title">21 lessons for the 21st century</h5>
               <p class="card-text">In a world deluged by irrelevant information, clarity is power. Censorship works not by blocking the flow of information, but rather by flooding people with disinformation and distractions. 21 Lessons for the 21st Century cuts through these muddy waters and confronts some of the most urgent questions on today’s global agenda.</p>
-              <a href="" class="btn btn-outline-danger btn-sm">
+              <a href="https://github.com/codedoc7" class="btn btn-outline-danger btn-sm">
               Contributed by - Keshav</a>
           </div>
          </div>
@@ -641,10 +641,10 @@
         </div>
 
       
-         <div class="col-lg-4 mb-4">
+         <div class="col-lg-4 mb-4"></div>
           <div class="card">
             <img alt="The Code Book" class="card-img-top"
-              src="https://m.media-amazon.com/images/I/81kUR2GPGNL.jpg">
+              src="https://m.media-amazon.com/images/I/51kQWMG+ZzL.jpg">
             <div class="card-body">
               <h5 class="card-title">The Man Who Knew Too Much: A Detective, his unorthodox ways to solve mysterious crimes and a tussle between Justice and his family</h5>
               <p class="card-text">The Man Who Knew Too Much is a humorous story set in an army training camp. It highlights the attitude of one of the trainees at the camp, Private Quelch, who has a habit of showing off his knowledge in an attempt to outshine the other trainees in his batch.</p>
@@ -661,7 +661,7 @@
     <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/en/3/3a/Wings_of_Fire_by_A_P_J_Abdul_Kalam_Book_Cover.jpg" alt="" />
     <div class="card-body">
       <h5 class="card-title">Wings of Fire</h5>
-      <p class="card-text">Wings of Fire, is the autobiography of the Missile Man of India and President of India, Dr. A. P. J. Abdul Kalam. It was written by him and Arun Tiwari.</p>
+      <p class="card-text">[</p>
       <a
         href="https://github.com/Op-panda"
         class="btn btn-outline-danger btn-sm"
