--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
             <div class="card-body">
               <h5 class="card-title">21 lessons for the 21st century</h5>
               <p class="card-text">In a world deluged by irrelevant information, clarity is power. Censorship works not by blocking the flow of information, but rather by flooding people with disinformation and distractions. 21 Lessons for the 21st Century cuts through these muddy waters and confronts some of the most urgent questions on today’s global agenda.</p>
-              <a href="" class="btn btn-outline-danger btn-sm">
+              <a href="https://github.com/codedoc7" class="btn btn-outline-danger btn-sm">
               Contributed by - Keshav</a>
           </div>
          </div>
