added The Power of your Subconscious Mind book card

--- a/index.html
+++ b/index.html
@@ -742,6 +742,22 @@
              </div>
            </div>
          </div>
+
+         <div class="col-lg-4 mb-4">
+          <div class="card">
+             <img class="card-img-top" src="https://m.media-amazon.com/images/I/51QTTApN-XL._SX324_BO1,204,203,200_.jpg" alt="The Power of your Subconscious Mind"/>
+            <div class="card-body">
+               <h5 class="card-title">The Power of your Subconscious Mind</h5>
+               <p class="card-text">The Power of Your Subconscious Mind is a classic self-help book written by Dr. Joseph Murphy, originally published in 1963. The author shares his experimental analysis and spiritual enlightenment to help the readers in their everyday lives. We have two types of brain conscious and subconscious. The latter works non-stop, even when we sleep, and this novel focuses on how we can use our subconscious mind to change our responses and habits towards any situation or person. </p>
+               <a href="https://github.com/abhijais27" class="btn btn-outline-danger btn-sm">Contributed by - Abhishek jaiswal</a>
+             </div>
+           </div>
+         </div>
+
+
+
+
+
         <!--Ends here-->
       </div>
     </div>
