--- a/index.html
+++ b/index.html
@@ -742,6 +742,17 @@
              </div>
            </div>
          </div>
+        
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+             <img class="card-img-top" src="https://m.media-amazon.com/images/I/412GfwQATXL._SX347_BO1,204,203,200_.jpg" alt="Let Us C" />
+            <div class="card-body">
+               <h5 class="card-title">Let Us C : Authentic guide to C programming language</h5>
+               <p class="card-text">the most interesting C programming books for C language learners. The book begins with the basic knowledge of different concepts and further leads to advanced levels. This means the book will provide complete knowledge to the readers from basic to complex programming parts.</p>
+               <a href="https://github.com/kunal15112001" class="btn btn-outline-danger btn-sm">Contributed by - Kunal Bhade</a>
+             </div>
+           </div>
+        </div>
         <!--Ends here-->
       </div>
     </div>
