--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="index.css" />
   <script defer src="./js/typewriterEffect.js"></script>
   <script defer src="./js/bookSearch.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>BookCase</title>
 </head>
 
@@ -750,6 +751,11 @@
     <h1></h1>
     <a href="#header" class="back-to-top"><i class="fas fa-angle-up fa-4x backToTop"></i></a>
   </footer>
+  <foot>
+    
+    <p class="footer"> <i class="fa fa-linkedin-square" aria-hidden="true"></i> <i class="fa fa-twitter" aria-hidden="true"></i> made with &#128147; by Vishal Kumar 
+     <strong class="copy">BOOK CASE &copy; 2022</strong></p>
+    </foot>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
