--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
   </footer>
   <foot>
     
-    <p class="footer"> <i class="fa fa-linkedin-square" aria-hidden="true"></i> <i class="fa fa-twitter" aria-hidden="true"></i> made with &#128147; by Vishal Kumar 
+    <p class="footer"> <a href="https://www.linkedin.com/in/vishaaal/"><i class="fa fa-linkedin-square" style="color:white" aria-hidden="true"></a></i></i><a href="https://github.com/vishaaal"><i class="fa fa-github" style="color:white"></i></a> made with &#128147; by Vishal
      <strong class="copy">BOOK CASE &copy; 2022</strong></p>
     </foot>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
