Added a book name Think And Grow Rich

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             </div>
           </div>
         </div>
+        
         <div class="col-lg-4 mb-4">
           <div class="card">
             <img class="card-img-top" src="https://m.media-amazon.com/images/I/410ruFcxtmL._SX324_BO1,204,203,200_.jpg"
@@ -589,7 +590,20 @@
             </div>
           </div>
         </div>
-
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+             <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0592/0935/1321/products/Thinkandgrowrich_540x.jpg?v=1649412903" 
+             alt="Think And Grow Rich" />
+            <div class="card-body">
+               <h5 class="card-title">Think and Grow Rich</h5>
+               <p class="card-text">A text full of anecdotes each of which offers a lesson in how one can use the 
+                power of their mind to manifest the reality they truly desire. This book is definite classic and is 
+                really focused on how to manage oneself in order to enjoy a productive and successful life. </p>
+               <a href="https://github.com/priyadarshni-jha" class="btn btn-outline-danger btn-sm">Contributed by - 
+                Priyadarshni Jha</a>
+             </div>
+           </div>
+        </div>
         <div class="col-lg-4 mb-4">
           <div class="card">
             <img class="card-img-top"
@@ -762,10 +776,11 @@
             <div class="card-body">
                <h5 class="card-title">Let Us C : Authentic guide to C programming language</h5>
                <p class="card-text">the most interesting C programming books for C language learners. The book begins with the basic knowledge of different concepts and further leads to advanced levels. This means the book will provide complete knowledge to the readers from basic to complex programming parts.</p>
-               <a href="https://github.com/kunal15112001" class="btn btn-outline-danger btn-sm">Contributed by - Kunal Bhade</a>
+               <a href="https://github.com/kunal15112001" class="btn btn-outline-danger btn-sm">Contributed by - kunal Bhade</a>
              </div>
            </div>
         </div>
+      
         <!--Ends here-->
       </div>
     </div>
