--- a/index.html
+++ b/index.html
@@ -606,9 +606,10 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
             </div>
           </div>
         </div>
+
         <div class="col-lg-4 mb-4">
           <div class="card">
-             <img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0592/0935/1321/products/Thinkandgrowrich_540x.jpg?v=1649412903" 
+             <img class="card-img-top" src="https://m.media-amazon.com/images/I/718wzK6mymL.jpg" 
              alt="Think And Grow Rich" />
             <div class="card-body">
                <h5 class="card-title">Think and Grow Rich</h5>
@@ -638,17 +639,16 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
         </div>
 
 
-        <div class="col-lg-4 mb-4">
+        <!-- <div class="col-lg-4 mb-4">
           <div class="card">
             <img class="card-img-top" src="https://m.media-amazon.com/images/I/71k7V0QvcdL._AC_UY218_.jpg" alt="" />
             <div class="card-body">
               <h5 class="card-title">The Courage to be dislike</h5>
               <p class="card-text">How to free yourself, change your life and achieve real happiness.</p>
               <a href="https://github.com/prachi0011" class="btn btn-outline-danger btn-sm">Contributed by - Prachi Agrawal</a>
-              </div>
           </div>
         </div>
-      </div>
+      </div> -->
       
       
       <div class="col-lg-4 mb-4">
