--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+  <body>
+  <div id="loading">
+    <img id="loading-image" src="https://cdn.dribbble.com/users/149180/screenshots/3208433/media/69be039cf606f6fe7ad8d1975306814e.gif" alt="Loading..." />
+  </div>
+    
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <a class="navbar-brand navTitle" href="index.html">
