--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 </head>
 
 <body>
-  <body>
   <div id="loading">
-    <img id="loading-image" src="https://cdn.dribbble.com/users/149180/screenshots/3208433/media/69be039cf606f6fe7ad8d1975306814e.gif" alt="Loading..." />
+    <img id="loading-image" width="100%" height="100%" src="https://cdn.dribbble.com/users/149180/screenshots/3208433/media/69be039cf606f6fe7ad8d1975306814e.gif" alt="Loading..." />
   </div>
     
   <!-- Navigation Bar -->
@@ -845,11 +844,6 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-  <script>
-    $('.navbar-nav>li>a').on('click', function () {
-      $('.navbar-collapse').collapse('hide');
-    });
-  </script>
   <script src="/index.js">
   </script>
 
