--- a/index.html
+++ b/index.html
@@ -542,6 +542,22 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="https://m.media-amazon.com/images/I/41wKll7ITyL._SX362_BO1,204,203,200_.jpg" alt="" />
+            <div class="card-body">
+              <h5 class="card-title">Who Will Cry When You Die?</h5>
+              <p class="card-text">Life Lessons From The Monk Who Sold His Ferrari Do You Feel that life is slipping by so fast that you might never get the chance to live with the meaning, happiness and joy you know you deserve? If so, then this book will be the guiding light that leads you to a brilliant new way of living. In this easy-to-read yet wisdom-rich manual, the author offers 101 simple solutions to life’s most complex problems, ranging from a little-known method for beating stress and worry to a powerful way to enjoy the journey while you create a legacy that lasts. “When You Were Born, You Cried While The World Rejoiced. Live Your Life In Such A Way That When You Die, The World Cries While You Rejoice.” Ancient Sanskrit Saying</p>
+              <a
+                href="https://github.com/Shreya-Jash"
+                class="btn btn-outline-danger btn-sm"
+                >Contributed by - Shreya Jash</a
+              >
+            </div>
+          </div>
+        </div>
+
         <!--Ends here-->
       </div>
     </div>
