add book black hat go

--- a/index.html
+++ b/index.html
@@ -821,6 +821,17 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
              </div>
            </div>
         </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+             <img class="card-img-top" src="https://m.media-amazon.com/images/I/51Eznheb+3L._SX258_BO1,204,203,200_.jpg" alt="Black Hat Go: Go Programming For Hackers and Pentesters"/>
+            <div class="card-body">
+               <h5 class="card-title">Black Hat Go: Go Programming For Hackers and Pentesters</h5>
+               <p class="card-text">Black Hat Go explores the darker side of Go, the popular programming language revered by hackers for its simplicity, efficiency, and reliability. It provides an arsenal of practical tactics from the perspective of security practitioners and hackers to help you test your systems, build and automate tools to fit your needs, and improve your offensive security skillset, all using the power of Go.</p>
+               <a href="https://github.com/hidesec" class="btn btn-outline-danger btn-sm">Contributed by - Hidesec</a>
+             </div>
+           </div>
+         </div>
       
         <!--Ends here-->
       </div>
