Added a new book card to the index.html

--- a/index.html
+++ b/index.html
@@ -840,6 +840,19 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
              </div>
            </div>
         </div>
+
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+             <img class="card-img-top" src="https://images-eu.ssl-images-amazon.com/images/I/51rVr4utFRL.jpg" alt="The Rudest Book Ever" />
+            <div class="card-body">
+               <h5 class="card-title">The Rudest Book Ever</h5>
+               <p class="card-text">“The Rudest Book Ever” by Shwetabh Gangwar lists out a set of principles for people to live by if they want to avoid all the unnecessary trauma they deal with. The author does not sugarcoat anything, he is straightforward and honest.
+               </p>
+               <a href="https://github.com/rabinkhatiwada" class="btn btn-outline-danger btn-sm">Contributed by - Rabin Khatiwada</a>
+             </div>s
+           </div>
+        </div>
       
         <!--Ends here-->
       </div>
