--- a/index.html
+++ b/index.html
@@ -840,6 +840,18 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
              </div>
            </div>
         </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiEcWX_NAw38845h9PABMeRbf1azbWDvl0vg&usqp=CAU" />
+            <div class="card-body">
+              <h5 class="card-title">The Monk who sold his Ferrari</h5>
+              <p class="card-text">The Monk Who Sold His Ferrari is a self-help classic telling the story of fictional lawyer Julian Mantle, who sold his mansion and Ferrari to study the seven virtues of the Sages of Sivana in the Himalayan mountains.</p>
+              <a href="https://github.com/Devrajsinh03" class="btn btn-outline-danger btn-sm">Contributed by - Devrajsinh03</a>
+            </div>
+          </div>
+        </div>
       
         <!--Ends here-->
       </div>
