--- a/index.html
+++ b/index.html
@@ -840,6 +840,27 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
              </div>
            </div>
         </div>
+        
+        <div class="col-lg-4 mb-4">
+  <div class="card">
+    <img class="card-img-top" src="https://images.app.goo.gl/nLG3B9xS5VgvTWjAA" alt="The Dead Don't Talk" />
+    <div class="card-body">
+      <h5 class="card-title">The Dead Don't Talk</h5>
+      <p class="card-text">The Dead Don’t Talk is a thrilling murder mystery in the classical mould, featuring the private investigator
+        Rudradeep Ray and his best friend Sujit. Based in Calcutta of the turbulent seventies, the story is set in the palatial home of
+        the Ganguly family where a member of the household is found murdered inside a locked room. As Rudradeep pieces together a
+        complicated puzzle, he has to contend with hostile witnesses and perplexing clues, with the police forming a reluctant ally. 
+        Rudradeep delves deeper into the crime, uncovering layer after layer of deceit and lies. No one is what they appear to be and 
+        almost every member of the Ganguly family has had a direct or indirect motive to commit the murder. As the murderer strikes a 
+        second time, Rudradeep leads the case to a shocking conclusion.</p>
+      <a
+        href="https://github.com/shaswata-karan"
+        class="btn btn-outline-danger btn-sm"
+        >Contributed by - Shaswata Karan</a
+      >
+    </div>
+  </div>
+</div>
       
         <!--Ends here-->
       </div>
