--- a/index.html
+++ b/index.html
@@ -850,9 +850,7 @@ This novel is set in late 1960s Tokyo during a period when Japanese students, li
         Rudradeep Ray and his best friend Sujit. Based in Calcutta of the turbulent seventies, the story is set in the palatial home of
         the Ganguly family where a member of the household is found murdered inside a locked room. As Rudradeep pieces together a
         complicated puzzle, he has to contend with hostile witnesses and perplexing clues, with the police forming a reluctant ally. 
-        Rudradeep delves deeper into the crime, uncovering layer after layer of deceit and lies. No one is what they appear to be and 
-        almost every member of the Ganguly family has had a direct or indirect motive to commit the murder. As the murderer strikes a 
-        second time, Rudradeep leads the case to a shocking conclusion.</p>
+        Rudradeep delves deeper into the crime, uncovering layer after layer of deceit and lies.</p>
       <a
         href="https://github.com/shaswata-karan"
         class="btn btn-outline-danger btn-sm"
