--- a/about.html
+++ b/about.html
@@ -60,6 +60,9 @@
           <li class="nav-item itemNav">
             <a class="nav-link" href="about.html">About</a>
           </li>
+          <li class="nav-item itemNav">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
         </ul>
       </div>
     </nav>
