--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>BookCase</title>
 </head>
 
-<body>
+<body class="day">
   <div id="loading">
     <img id="loading-image" width="100%" height="100%" src="https://cdn.dribbble.com/users/149180/screenshots/3208433/media/69be039cf606f6fe7ad8d1975306814e.gif" alt="Loading..." />
   </div>
