--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,10 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <a class="navbar-brand navTitle" href="index.html">
-        <i class="fas fa-desktop mr-2"></i>BookCase</a>
+        <a class="navbar-brand navTitle" href="index.html">
+          <img height="10%" width="20%" src="icons/book.png">
+          BookCase
+        </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item itemNav">
