--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
   </div><!-- Gallery  -->
   <div id="gallery-title"></div>
   <div class="gallery-div" id="">
-    <h1 class="gallery-head" id="gallery1">
+    <h1 class="gallery-head day" id="gallery1">
       Book Gallery
     </h1>
   </div>
 
   <div>
-    <p class="lead">We all love Books, don't we? Go ahead and share your favourite with us!</p>
+    <p class="lead day">We all love Books, don't we? Go ahead and share your favourite with us!</p>
     <!-- <a href="#gallery-title"><i class="fas fa-chevron-down fa-6x gallery-icon" id="icon1"></i></a> -->
   </div>
 
